<resources>
    <string name="app_name">CalculatorTwo</string>
    <string name="divide">/</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_multiply">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_subtract">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_addition">+</string>
    <string name="_dot">.</string>
    <string name="_0">0</string>
    <string name="_equals">=</string>
</resources>